--- a/Nwqis/Storyboard/ar.lproj/Main.strings
+++ b/Nwqis/Storyboard/ar.lproj/Main.strings
@@ -38,7 +38,7 @@
 "7ql-ee-a5E.normalTitle" = "نسيت كلمه المرور؟";
 
 /* Class = "UIButton"; normalTitle = "Login as company"; ObjectID = "7rZ-tT-0iw"; */
-"7rZ-tT-0iw.normalTitle" = "تسجيل الدخول كشركه";
+"7rZ-tT-0iw.normalTitle" = "شركه";
 
 /* Class = "UILabel"; text = "Find your needs"; ObjectID = "8aX-I2-EUd"; */
 "8aX-I2-EUd.text" = "ابحث عن احتياجاتك";
@@ -50,7 +50,7 @@
 "8yZ-LM-Faq.normalTitle" = "تسجيل";
 
 /* Class = "UIButton"; normalTitle = "SignUp as shop"; ObjectID = "24z-l1-5fw"; */
-"24z-l1-5fw.normalTitle" = "سجل كمحل تجاري";
+"24z-l1-5fw.normalTitle" = "محل تجاري";
 
 /* Class = "UINavigationItem"; title = "My request details"; ObjectID = "83u-yd-24g"; */
 "83u-yd-24g.title" = "تفاصيل طلبي";
@@ -206,7 +206,7 @@
 "M7d-BK-FPG.placeholder" = "اميل";
 
 /* Class = "UIButton"; normalTitle = "Login as shop"; ObjectID = "MBV-Ar-17m"; */
-"MBV-Ar-17m.normalTitle" = "تسجيل الدخول كمحل تجاري";
+"MBV-Ar-17m.normalTitle" = "محل تجاري";
 
 /* Class = "UIBarButtonItem"; title = "Item"; ObjectID = "mcQ-oi-Kal"; */
 "mcQ-oi-Kal.title" = "Item";
@@ -269,7 +269,7 @@
 "RGv-bq-Wkq.placeholder" = "اميل";
 
 /* Class = "UIButton"; normalTitle = "SignUp as company"; ObjectID = "rq4-X4-bZR"; */
-"rq4-X4-bZR.normalTitle" = "سجل كشركه";
+"rq4-X4-bZR.normalTitle" = "شركه";
 
 /* Class = "UIButton"; normalTitle = "Login"; ObjectID = "RTS-HX-MYY"; */
 "RTS-HX-MYY.normalTitle" = "تسجيل الدخول";
